log
Thu 21 Mar 2024 02:06:38 PM UTC: 
 tests:  0|5
total_score: 0/70
c803435
Thu 21 Mar 2024 02:08:58 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
7662b54
Thu 21 Mar 2024 08:26:21 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   64 |   while (dato != NULL);
      |   ^~~~~
exercises.c:65:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   65 |   {
      |   ^
cc1: all warnings being treated as errors
Compilation failed
f247c99
